RESOLVED FIXED215317
[JSC] JSFinalObject::finishCreation's ASSERT has stale condition
https://bugs.webkit.org/show_bug.cgi?id=215317
Summary [JSC] JSFinalObject::finishCreation's ASSERT has stale condition
Yusuke Suzuki
Reported 2020-08-09 22:24:46 PDT
[JSC] JSFinalObject::finishCreation's ASSERT has stale condition
Attachments
Patch (6.24 KB, patch)
2020-08-09 22:28 PDT, Yusuke Suzuki
no flags
Patch (6.21 KB, patch)
2020-08-09 22:32 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-08-09 22:28:37 PDT
Yusuke Suzuki
Comment 2 2020-08-09 22:32:49 PDT
Mark Lam
Comment 3 2020-08-09 22:34:38 PDT
Comment on attachment 406281 [details] Patch r=me
Yusuke Suzuki
Comment 4 2020-08-09 23:09:50 PDT
ASSERT is changed part, the other part is not changed. So, only mac-debug-wk1 is interesting.
Yusuke Suzuki
Comment 5 2020-08-10 00:21:59 PDT
webaudio/automatic-pull-node.html [ Crash ] This crash signature is known WebAudio crash.
EWS
Comment 6 2020-08-10 00:38:29 PDT
Committed r265423: <https://trac.webkit.org/changeset/265423> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406281 [details].
Radar WebKit Bug Importer
Comment 7 2020-08-10 00:39:19 PDT
Note You need to log in before you can comment on or make changes to this bug.